# industrial-ai-news

./: .README.md.swp  .env.example  .gitignore  .pre-commit-config.yaml  README.md  build_feedback_report.py  config.py  debug_filter.py  debug_notion.py  explain.py  fetch_notion_feedback.py  main.py  ops_dashboard.py  push_digest_to_notion.py  pyproject.toml  pytest.ini  resend_email.py  run_daily.sh  run_scheduled_dispatch.sh  send_dual_view_test.py  setup_notion.py  test_llm_live.py  test_notion_push.py  test_ollama.py  verify_youtube_api.py
.github/workflows/: daily-intel.yml
docs/: PRD_zh_v1.md  runbook.md
output/: newsletter_preview_technician.html
src/: models.py
src/analyzers/: .llm_analyzer.py.swp  kimi_analyzer.py  llm_analyzer.py
src/delivery/: email_sender.py  notion_controller.py  notion_sender.py  notion_service.py
src/filters/: ollama_filter.py
src/scrapers/: dynamic_scraper.py  rss_scraper.py  web_scraper.py  youtube_scraper.py
tests/: benchmark_ollama_filter.py  performance_test_notion.py  send_dual_view_test.py  send_test_email_original.py  test_filter_and_email.py  test_llm_json_extract.py  test_main_pending_logic.py  test_main_pipeline.py  test_notion_dedupe.py  test_notion_service.py  test_notion_service_unit.py  test_ollama.py  test_ollama_filter_logic.py  test_rss_scraper.py  test_technician_readability.py  test_web_scraper.py  test_youtube_scraper.py
tests/analyzers/: test_llm_analyzer.py
tests/delivery/: test_notion_service.py
tests/scrapers/: test_web_scraper.py
