[project]
name = "industrial-ai-intel"
version = "0.1.0"
description = "Daily intelligence system for Industrial AI, DES & Digital Twin"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "beautifulsoup4>=4.12",
    "feedparser>=6.0",
    "playwright>=1.40",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",
    "requests>=2.31",
    "notion-client>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6.0",
    "mypy>=1.10",
    "pre-commit>=3.8",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
check_untyped_defs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
